--- a/fastmedical/hospitalizacion/ccontrol/control/log_fastmedical.html
+++ b/fastmedical/hospitalizacion/ccontrol/control/log_fastmedical.html
@@ -1,20 +1,20 @@
-10/31/18 12:39 am:57:000000: EXECUTE dbweb.pnsCronogramaMedico '3','2018-10-31','7','15','-4','XXXX500601|C. DERMATOLOGIA','','0000000001','5'<br>
-10/31/18 12:39 am:57:000000: EXECUTE dbweb.pnsCronogramaMedico '3','2018-10-31','7','15','-3','XXXX500601|C. DERMATOLOGIA','','0000000001','5'<br>
-10/31/18 12:39 am:56:000000: EXECUTE dbweb.pnsCronogramaMedico '3','2018-10-31','7','15','-2','XXXX500601|C. DERMATOLOGIA','','0000000001','5'<br>
-10/31/18 12:39 am:56:000000: EXECUTE dbweb.pnsCronogramaMedico '3','2018-10-31','7','15','-1','XXXX500601|C. DERMATOLOGIA','','0000000001','5'<br>
-10/31/18 12:39 am:56:000000: EXECUTE dbweb.pnsCronogramaMedico '3','2018-10-31','7','15','1141','XXXX500601|C. DERMATOLOGIA','','0000000001','5'<br>
-10/31/18 12:39 am:56:000000: EXECUTE dbweb.pnsCronogramaMedico '2','2018-10-31','7','15','','XXXX500601|C. DERMATOLOGIA','','0000000001','5'<br>
-10/31/18 12:39 am:55:000000: EXECUTE dbweb.pnsCronogramaMedico '1','2018-10-31','7','15','','XXXX500601|C. DERMATOLOGIA','','0000000001','5'<br>
-10/31/18 12:39 am:55:000000: EXECUTE dbweb.pnsCronogramaMedico '9','2018-10-31','7','15','','XXXX500601|C. DERMATOLOGIA','','0000000001',''<br>
-10/31/18 12:39 am:55:000000: EXECUTE permisos.pnsSesiones 'LEER','','600','GARROYO-L.divemotor.com.pe','mi contenido','','401','106763'<br>
-10/31/18 12:39 am:54:000000: EXECUTE dbweb.pnsDatosCitasInformes '6','','','10396','','','SOPORTE','GARROYO-L.DIVEMOTOR.COM.PE'<br>
-10/31/18 12:39 am:54:000000: EXECUTE permisos.pnsSesiones 'LEER','','600','GARROYO-L.divemotor.com.pe','mi contenido','','401','106763'<br>
-10/31/18 12:39 am:53:000000: EXECUTE dbweb.pnsDatosCitasInformes '3','','','10396','','','SOPORTE','GARROYO-L.DIVEMOTOR.COM.PE'<br>
-10/31/18 12:39 am:53:000000: EXECUTE permisos.pnsSesiones 'LEER','','600','GARROYO-L.divemotor.com.pe','mi contenido','','401','106763'<br>
-10/31/18 12:39 am:53:000000: EXECUTE dbweb.pnsDatosCitasInformes '2','','','10396','','','SOPORTE','GARROYO-L.DIVEMOTOR.COM.PE'<br>
-10/31/18 12:39 am:52:000000: EXECUTE permisos.pnsSesiones 'LEER','','600','GARROYO-L.divemotor.com.pe','mi contenido','','401','106763'<br>
-10/31/18 12:39 am:46:000000: EXECUTE dbweb.pnsPagos '01','1','0004098','0001','1','25.423729','4.576271','30.00','90157856','31/10/18','14409','001  ','|30.00','|0','|','|','|30.00','|1.00','|30.00','000000010413','|','SOPORTE','GARROYO-L.divemotor.com.pe'<br>
-10/31/18 12:39 am:46:000000: EXECUTE permisos.pnsSesiones 'LEER','','600','GARROYO-L.divemotor.com.pe','mi contenido','','401','106763'<br>
-10/31/18 12:39 am:42:000000: EXECUTE dbweb.pnsListaOrdenFacturacion '2','0001535-2018','todo'<br>
-10/31/18 12:39 am:42:000000: EXECUTE permisos.pnsSesiones 'LEER','','600','GARROYO-L.divemotor.com.pe','mi contenido','','401','106763'<br>
-10/31/18 12:39 am:41:000000: EXECUTE dbweb.pnsListaFormasDePago <br>
+11/25/18 11:53 pm:05:000000: EXECUTE dbweb.pnsMantenimientoDiagnosticos '10','','','','','','','2','','','','','','',''<br>
+11/25/18 11:53 pm:05:000000: EXECUTE permisos.pnsSesiones 'LEER','','600','GARROYO-L.divemotor.com.pe','mi contenido','','405','106771'<br>
+11/25/18 11:53 pm:05:000000: EXECUTE dbweb.pnsMantenimientoTratamientos '2','','','','10398','','','','','','','','','',''<br>
+11/25/18 11:53 pm:05:000000: EXECUTE permisos.pnsSesiones 'LEER','','600','GARROYO-L.divemotor.com.pe','mi contenido','','405','106771'<br>
+11/25/18 11:53 pm:04:000000: EXECUTE dbweb.pnsMantenimientoTratamientos '4','','','','10398','','','','','','','','','',''<br>
+11/25/18 11:53 pm:04:000000: EXECUTE permisos.pnsSesiones 'LEER','','600','GARROYO-L.divemotor.com.pe','mi contenido','','405','106771'<br>
+11/25/18 11:53 pm:04:000000: EXECUTE dbweb.pnsMantenimientoDiagnosticos '4','','10398','','','','','','','','','','','',''<br>
+11/25/18 11:53 pm:04:000000: EXECUTE permisos.pnsSesiones 'LEER','','600','GARROYO-L.divemotor.com.pe','mi contenido','','405','106771'<br>
+11/25/18 11:53 pm:03:000000: EXECUTE dbweb.pnsGrabadoInstantaneoCombos '4','10398',''<br>
+11/25/18 11:53 pm:03:000000: EXECUTE permisos.pnsSesiones 'LEER','','600','GARROYO-L.divemotor.com.pe','mi contenido','','405','106771'<br>
+11/25/18 11:53 pm:03:000000: EXECUTE dbweb.pnsGrabadoInstantaneoCombos '3','10398',''<br>
+11/25/18 11:53 pm:03:000000: EXECUTE permisos.pnsSesiones 'LEER','','600','GARROYO-L.divemotor.com.pe','mi contenido','','405','106771'<br>
+11/25/18 11:53 pm:02:000000: EXECUTE dbweb.pnsMantenimientoHC '6','10398','','','','LMARINO','GARROYO-L.divemotor.com.pe'<br>
+11/25/18 11:53 pm:02:000000: EXECUTE dbweb.pnsMantenimientoDiagnosticos '9','','','','','','','','','','','','','',''<br>
+11/25/18 11:53 pm:01:000000: EXECUTE dbweb.pnsMantenimientoDiagnosticos '8','','','','','','','','','','','','','',''<br>
+11/25/18 11:53 pm:01:000000: EXECUTE dbweb.pnsDatosExamenes '2','10398','31'<br>
+11/25/18 11:52 pm:59:000000: EXECUTE dbweb.pnsDatosExamenes '2','10398','31'<br>
+11/25/18 11:52 pm:59:000000: EXECUTE dbweb.pnsListaExamenMedico '%%%','','1'<br>
+11/25/18 11:52 pm:59:000000: EXECUTE dbweb.pnsListaExamenPorServicio 'XXXX500601','','1','10398'<br>
+11/25/18 11:52 pm:59:000000: EXECUTE dbweb.pnsListaVersionExamenDeProduccion <br>
