--- a/fastmedical/hospitalizacion/classReporte/reportes/log_fastmedical.html
+++ b/fastmedical/hospitalizacion/classReporte/reportes/log_fastmedical.html
@@ -1,20 +1,20 @@
-11/10/18 2:07 pm:26:000000: EXECUTE dbweb.pnsMantenimientoReportes '16','4','','','','','','','','','','','','','','','','','',''<br>
-11/10/18 2:07 pm:26:000000: EXECUTE dbweb.pnsImprimirReportes '7','1011','',''<br>
-11/10/18 2:07 pm:25:000000: EXECUTE dbweb.pnsMantenimientoReportes '18','4','','','','','','','','','','','','','recetaUnicaEstandarizada','','','','3',''<br>
-11/10/18 2:07 pm:25:000000: EXECUTE dbweb.pnsImprimirReportes '2','1011','',''<br>
-11/10/18 2:07 pm:25:000000: EXECUTE dbweb.pnsMantenimientoReportes '18','4','','','','','','','','','','','','','recetaUnicaEstandarizada','','','','2',''<br>
-11/10/18 2:07 pm:25:000000: EXECUTE dbweb.pnsImprimirReportes '6','1011','2',''<br>
-11/10/18 2:07 pm:25:000000: EXECUTE dbweb.pnsMantenimientoReportes '18','4','','','','','','','','','','','','','recetaUnicaEstandarizada','','','','1',''<br>
-11/10/18 2:05 pm:51:000000: EXECUTE dbweb.nsmImprimirReporteHistoriaXDia '4','10397','',''<br>
-11/10/18 2:05 pm:47:000000: EXECUTE dbweb.pnsMantenimientoReportes '16','10','','','','','','','','','','','','','','','','','',''<br>
-11/10/18 2:05 pm:47:000000: EXECUTE dbweb.pnsMantenimientoTratamientos '7','','','','10397','','','','','','','','','','2'<br>
-11/10/18 2:05 pm:47:000000: EXECUTE dbweb.pnsMantenimientoTratamientos '7','','','','10397','','','','','','','','','','1'<br>
-11/10/18 2:05 pm:47:000000: EXECUTE dbweb.pnsMantenimientoDiagnosticos '11','','10397','','','','','','','','','','','',''<br>
-11/10/18 2:05 pm:47:000000: EXECUTE dbweb.pnsHC '3','10397','31',''<br>
-11/10/18 2:05 pm:47:000000: EXECUTE dbweb.pnsHC '2','10397','','xprogramacion'<br>
-11/10/18 2:05 pm:46:000000: EXECUTE dbweb.pnsListarDatosTriaje '2','10397'<br>
-11/10/18 2:05 pm:46:000000: EXECUTE dbweb.pnsManteMotivosDeConsulta '2','','','','','','10397','','','',''<br>
-11/10/18 2:05 pm:46:000000: EXECUTE dbweb.pnsHC '5','10397','',''<br>
-11/10/18 2:05 pm:46:000000: EXECUTE dbweb.pnsMantenimientoImagenes '2','10397','','','',''<br>
-11/10/18 2:05 pm:46:000000: EXECUTE dbweb.pnsImprimirHcXDia '3','10397','','',''<br>
-11/10/18 2:05 pm:46:000000: EXECUTE dbweb.pnsImprimirHcXDia '3','10397','','',''<br>
+11/27/18 7:10 am:44:000000: EXECUTE dbweb.pnsMantenimientoReportes '16','4','','','','','','','','','','','','','','','','','',''<br>
+11/27/18 7:10 am:44:000000: EXECUTE dbweb.pnsImprimirReportes '7','1011','',''<br>
+11/27/18 7:10 am:44:000000: EXECUTE dbweb.pnsMantenimientoReportes '18','4','','','','','','','','','','','','','recetaUnicaEstandarizada','','','','3',''<br>
+11/27/18 7:10 am:44:000000: EXECUTE dbweb.pnsImprimirReportes '2','1011','',''<br>
+11/27/18 7:10 am:43:000000: EXECUTE dbweb.pnsMantenimientoReportes '18','4','','','','','','','','','','','','','recetaUnicaEstandarizada','','','','2',''<br>
+11/27/18 7:10 am:43:000000: EXECUTE dbweb.pnsImprimirReportes '6','1011','2',''<br>
+11/27/18 7:10 am:43:000000: EXECUTE dbweb.pnsMantenimientoReportes '18','4','','','','','','','','','','','','','recetaUnicaEstandarizada','','','','1',''<br>
+11/27/18 6:48 am:09:000000: EXECUTE dbweb.pnsMantenimientoReportes '16','4','','','','','','','','','','','','','','','','','',''<br>
+11/27/18 6:48 am:08:000000: EXECUTE dbweb.pnsImprimirReportes '7','1011','',''<br>
+11/27/18 6:48 am:08:000000: EXECUTE dbweb.pnsMantenimientoReportes '18','4','','','','','','','','','','','','','recetaUnicaEstandarizada','','','','3',''<br>
+11/27/18 6:48 am:08:000000: EXECUTE dbweb.pnsImprimirReportes '2','1011','',''<br>
+11/27/18 6:48 am:07:000000: EXECUTE dbweb.pnsMantenimientoReportes '18','4','','','','','','','','','','','','','recetaUnicaEstandarizada','','','','2',''<br>
+11/27/18 6:48 am:07:000000: EXECUTE dbweb.pnsImprimirReportes '6','1011','2',''<br>
+11/27/18 6:48 am:07:000000: EXECUTE dbweb.pnsMantenimientoReportes '18','4','','','','','','','','','','','','','recetaUnicaEstandarizada','','','','1',''<br>
+11/27/18 6:17 am:02:000000: EXECUTE dbweb.pnsMantenimientoReportes '16','4','','','','','','','','','','','','','','','','','',''<br>
+11/27/18 6:17 am:02:000000: EXECUTE dbweb.pnsImprimirReportes '7','1011','',''<br>
+11/27/18 6:17 am:02:000000: EXECUTE dbweb.pnsMantenimientoReportes '18','4','','','','','','','','','','','','','recetaUnicaEstandarizada','','','','3',''<br>
+11/27/18 6:17 am:02:000000: EXECUTE dbweb.pnsImprimirReportes '2','1011','',''<br>
+11/27/18 6:17 am:01:000000: EXECUTE dbweb.pnsMantenimientoReportes '18','4','','','','','','','','','','','','','recetaUnicaEstandarizada','','','','2',''<br>
+11/27/18 6:17 am:01:000000: EXECUTE dbweb.pnsImprimirReportes '6','1011','2',''<br>
