--- a/fastmedical/hospitalizacion/ccontrol/control/log_fastmedical.html
+++ b/fastmedical/hospitalizacion/ccontrol/control/log_fastmedical.html
@@ -1,20 +1,20 @@
-11/25/18 11:53 pm:05:000000: EXECUTE dbweb.pnsMantenimientoDiagnosticos '10','','','','','','','2','','','','','','',''<br>
-11/25/18 11:53 pm:05:000000: EXECUTE permisos.pnsSesiones 'LEER','','600','GARROYO-L.divemotor.com.pe','mi contenido','','405','106771'<br>
-11/25/18 11:53 pm:05:000000: EXECUTE dbweb.pnsMantenimientoTratamientos '2','','','','10398','','','','','','','','','',''<br>
-11/25/18 11:53 pm:05:000000: EXECUTE permisos.pnsSesiones 'LEER','','600','GARROYO-L.divemotor.com.pe','mi contenido','','405','106771'<br>
-11/25/18 11:53 pm:04:000000: EXECUTE dbweb.pnsMantenimientoTratamientos '4','','','','10398','','','','','','','','','',''<br>
-11/25/18 11:53 pm:04:000000: EXECUTE permisos.pnsSesiones 'LEER','','600','GARROYO-L.divemotor.com.pe','mi contenido','','405','106771'<br>
-11/25/18 11:53 pm:04:000000: EXECUTE dbweb.pnsMantenimientoDiagnosticos '4','','10398','','','','','','','','','','','',''<br>
-11/25/18 11:53 pm:04:000000: EXECUTE permisos.pnsSesiones 'LEER','','600','GARROYO-L.divemotor.com.pe','mi contenido','','405','106771'<br>
-11/25/18 11:53 pm:03:000000: EXECUTE dbweb.pnsGrabadoInstantaneoCombos '4','10398',''<br>
-11/25/18 11:53 pm:03:000000: EXECUTE permisos.pnsSesiones 'LEER','','600','GARROYO-L.divemotor.com.pe','mi contenido','','405','106771'<br>
-11/25/18 11:53 pm:03:000000: EXECUTE dbweb.pnsGrabadoInstantaneoCombos '3','10398',''<br>
-11/25/18 11:53 pm:03:000000: EXECUTE permisos.pnsSesiones 'LEER','','600','GARROYO-L.divemotor.com.pe','mi contenido','','405','106771'<br>
-11/25/18 11:53 pm:02:000000: EXECUTE dbweb.pnsMantenimientoHC '6','10398','','','','LMARINO','GARROYO-L.divemotor.com.pe'<br>
-11/25/18 11:53 pm:02:000000: EXECUTE dbweb.pnsMantenimientoDiagnosticos '9','','','','','','','','','','','','','',''<br>
-11/25/18 11:53 pm:01:000000: EXECUTE dbweb.pnsMantenimientoDiagnosticos '8','','','','','','','','','','','','','',''<br>
-11/25/18 11:53 pm:01:000000: EXECUTE dbweb.pnsDatosExamenes '2','10398','31'<br>
-11/25/18 11:52 pm:59:000000: EXECUTE dbweb.pnsDatosExamenes '2','10398','31'<br>
-11/25/18 11:52 pm:59:000000: EXECUTE dbweb.pnsListaExamenMedico '%%%','','1'<br>
-11/25/18 11:52 pm:59:000000: EXECUTE dbweb.pnsListaExamenPorServicio 'XXXX500601','','1','10398'<br>
-11/25/18 11:52 pm:59:000000: EXECUTE dbweb.pnsListaVersionExamenDeProduccion <br>
+11/27/18 8:35 pm:10:000000: EXECUTE dbweb.pnsImprimirHcXDia '2','10399','','',''<br>
+11/27/18 8:35 pm:09:000000: EXECUTE permisos.pnsSesiones 'LEER','','600','GARROYO-L.divemotor.com.pe','mi contenido','','405','106775'<br>
+11/27/18 8:35 pm:03:000000: EXECUTE dbweb.pnsMantenimientoTratamientos '7','','','','10399','','','','','','','','','','2'<br>
+11/27/18 8:35 pm:03:000000: EXECUTE dbweb.pnsMantenimientoTratamientos '7','','','','10399','','','','','','','','','','1'<br>
+11/27/18 8:35 pm:02:000000: EXECUTE dbweb.pnsMantenimientoDiagnosticos '11','','10399','','','','','','','','','','','',''<br>
+11/27/18 8:35 pm:02:000000: EXECUTE dbweb.pnsHC '3','10399','31',''<br>
+11/27/18 8:35 pm:02:000000: EXECUTE dbweb.pnsHC '2','10399','','xprogramacion'<br>
+11/27/18 8:35 pm:01:000000: EXECUTE dbweb.pnsImprimirHcXDia '3','10399','','',''<br>
+11/27/18 8:35 pm:01:000000: EXECUTE dbweb.pnsMantenimientoAntecedentes '4','','','','10399','','','','','',''<br>
+11/27/18 8:35 pm:01:000000: EXECUTE dbweb.pnsManteMotivosDeConsulta '2','','','','','','10399','','','',''<br>
+11/27/18 8:35 pm:00:000000: EXECUTE dbweb.pnsListarDatosTriaje '1','10399'<br>
+11/27/18 8:35 pm:00:000000: EXECUTE dbweb.pnsHC '6','10399','',''<br>
+11/27/18 8:35 pm:00:000000: EXECUTE permisos.pnsSesiones 'LEER','','600','GARROYO-L.divemotor.com.pe','mi contenido','','405','106775'<br>
+11/27/18 8:34 pm:59:000000: EXECUTE dbweb.pnsMantenimientoHC '6','10399','','','','LMARINO','GARROYO-L.divemotor.com.pe'<br>
+11/27/18 8:34 pm:59:000000: EXECUTE dbweb.pnsMantenimientoDiagnosticos '9','','','','','','','','','','','','','',''<br>
+11/27/18 8:34 pm:59:000000: EXECUTE dbweb.pnsMantenimientoDiagnosticos '8','','','','','','','','','','','','','',''<br>
+11/27/18 8:34 pm:58:000000: EXECUTE dbweb.pnsMantenimientoHC '8','','','XXXX500601','','',''<br>
+11/27/18 8:34 pm:58:000000: EXECUTE dbweb.pnsMantenimientoHC '7','','','0001','','',''<br>
+11/27/18 8:34 pm:58:000000: EXECUTE dbweb.pnsMantenimientoHC '1','10399','2','','','LMARINO','GARROYO-L.divemotor.com.pe'<br>
+11/27/18 8:34 pm:58:000000: EXECUTE dbweb.pnsMantenimientoDeModulosPorServicio '6','','','','','',''<br>
