--- a/fastmedical/hospitalizacion/cvista/cita/log_fastmedical.html
+++ b/fastmedical/hospitalizacion/cvista/cita/log_fastmedical.html
@@ -1,3 +1,5 @@
+11/27/18 8:31 pm:55:000000: EXECUTE dbweb.pnsMantenimientoTriaje 'listar','10399','1','1','1','1','1','1','1','1','1'<br>
+11/27/18 8:26 pm:54:000000: EXECUTE dbweb.pnsMantenimientoTriaje 'listar','10399','1','1','1','1','1','1','1','1','1'<br>
 11/09/18 7:40 pm:59:000000: EXECUTE dbweb.pnsMantenimientoTriaje 'listar','10397','1','1','1','1','1','1','1','1','1'<br>
 11/09/18 7:36 pm:42:000000: EXECUTE dbweb.pnsMantenimientoTriaje 'listar','10397','1','1','1','1','1','1','1','1','1'<br>
 11/09/18 7:34 pm:10:000000: EXECUTE dbweb.pnsMantenimientoTriaje 'listar','10397','1','1','1','1','1','1','1','1','1'<br>
