--- a/fastmedical/hospitalizacion/ccontrol/control/log_fastmedical.html
+++ b/fastmedical/hospitalizacion/ccontrol/control/log_fastmedical.html
@@ -1,20 +1,20 @@
-11/27/18 8:35 pm:10:000000: EXECUTE dbweb.pnsImprimirHcXDia '2','10399','','',''<br>
-11/27/18 8:35 pm:09:000000: EXECUTE permisos.pnsSesiones 'LEER','','600','GARROYO-L.divemotor.com.pe','mi contenido','','405','106775'<br>
-11/27/18 8:35 pm:03:000000: EXECUTE dbweb.pnsMantenimientoTratamientos '7','','','','10399','','','','','','','','','','2'<br>
-11/27/18 8:35 pm:03:000000: EXECUTE dbweb.pnsMantenimientoTratamientos '7','','','','10399','','','','','','','','','','1'<br>
-11/27/18 8:35 pm:02:000000: EXECUTE dbweb.pnsMantenimientoDiagnosticos '11','','10399','','','','','','','','','','','',''<br>
-11/27/18 8:35 pm:02:000000: EXECUTE dbweb.pnsHC '3','10399','31',''<br>
-11/27/18 8:35 pm:02:000000: EXECUTE dbweb.pnsHC '2','10399','','xprogramacion'<br>
-11/27/18 8:35 pm:01:000000: EXECUTE dbweb.pnsImprimirHcXDia '3','10399','','',''<br>
-11/27/18 8:35 pm:01:000000: EXECUTE dbweb.pnsMantenimientoAntecedentes '4','','','','10399','','','','','',''<br>
-11/27/18 8:35 pm:01:000000: EXECUTE dbweb.pnsManteMotivosDeConsulta '2','','','','','','10399','','','',''<br>
-11/27/18 8:35 pm:00:000000: EXECUTE dbweb.pnsListarDatosTriaje '1','10399'<br>
-11/27/18 8:35 pm:00:000000: EXECUTE dbweb.pnsHC '6','10399','',''<br>
-11/27/18 8:35 pm:00:000000: EXECUTE permisos.pnsSesiones 'LEER','','600','GARROYO-L.divemotor.com.pe','mi contenido','','405','106775'<br>
-11/27/18 8:34 pm:59:000000: EXECUTE dbweb.pnsMantenimientoHC '6','10399','','','','LMARINO','GARROYO-L.divemotor.com.pe'<br>
-11/27/18 8:34 pm:59:000000: EXECUTE dbweb.pnsMantenimientoDiagnosticos '9','','','','','','','','','','','','','',''<br>
-11/27/18 8:34 pm:59:000000: EXECUTE dbweb.pnsMantenimientoDiagnosticos '8','','','','','','','','','','','','','',''<br>
-11/27/18 8:34 pm:58:000000: EXECUTE dbweb.pnsMantenimientoHC '8','','','XXXX500601','','',''<br>
-11/27/18 8:34 pm:58:000000: EXECUTE dbweb.pnsMantenimientoHC '7','','','0001','','',''<br>
-11/27/18 8:34 pm:58:000000: EXECUTE dbweb.pnsMantenimientoHC '1','10399','2','','','LMARINO','GARROYO-L.divemotor.com.pe'<br>
-11/27/18 8:34 pm:58:000000: EXECUTE dbweb.pnsMantenimientoDeModulosPorServicio '6','','','','','',''<br>
+12/01/18 2:59 pm:12:000000: EXECUTE dbweb.pnsAdmision '06','',''<br>
+12/01/18 2:59 pm:12:000000: EXECUTE dbweb.pnsAdmision '27'<br>
+12/01/18 2:59 pm:12:000000: EXECUTE dbweb.pnsUbigeo 'pais','','',''<br>
+12/01/18 2:59 pm:12:000000: EXECUTE dbweb.pnsUbigeo 'dst','','',''<br>
+12/01/18 2:59 pm:11:000000: EXECUTE dbweb.pnsUbigeo 'prv','','',''<br>
+12/01/18 2:59 pm:11:000000: EXECUTE dbweb.pnsUbigeo 'dpt','','','9589'<br>
+12/01/18 2:59 pm:11:000000: EXECUTE dbweb.pnsUbigeo 'pais','','',''<br>
+12/01/18 2:59 pm:11:000000: EXECUTE dbweb.pnsUbigeo 'dst','15','01',''<br>
+12/01/18 2:59 pm:11:000000: EXECUTE dbweb.pnsUbigeo 'prv','15','',''<br>
+12/01/18 2:59 pm:11:000000: EXECUTE dbweb.pnsUbigeo 'dpt','','','9589'<br>
+12/01/18 2:59 pm:11:000000: EXECUTE dbweb.pnsAdmision '18','',''<br>
+12/01/18 2:59 pm:11:000000: EXECUTE dbweb.pnsAdmision '16','0001',''<br>
+12/01/18 2:59 pm:11:000000: EXECUTE dbweb.pnsAdmision '25','0001',''<br>
+12/01/18 2:59 pm:10:000000: EXECUTE dbweb.pnsAdmision '24','',''<br>
+12/01/18 2:59 pm:10:000000: EXECUTE dbweb.pnsAdmision '09','',''<br>
+12/01/18 2:59 pm:10:000000: EXECUTE dbweb.pnsAdmision '08','',''<br>
+12/01/18 2:59 pm:10:000000: EXECUTE dbweb.pnsAdmision '13','',''<br>
+12/01/18 2:59 pm:10:000000: EXECUTE dbweb.pnsAdmision '12','',''<br>
+12/01/18 2:59 pm:10:000000: EXECUTE dbweb.pnsAdmision '17','',''<br>
+12/01/18 2:59 pm:10:000000: EXECUTE dbweb.pnsAdmision '14','',''<br>
